feat: starting auth process

--- a/PenalCodeAPI/appsettings.json
+++ b/PenalCodeAPI/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=criminalcodedb;Trusted_Connection=True;"
   },
+  "AppSettings": {
+    "Token": "Top secret Key Generated"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
